create table categoria (
   id_categoria number
      generated by default as identity
   primary key,
   nombre       varchar2(50) not null,
   created_at   timestamp default current_timestamp not null
);

create table empleado (
   id_empleado        number
      generated by default as identity
   primary key,
   nombre             varchar2(50) not null,
   apellido           varchar2(50) not null,
   email              varchar2(100) not null unique,
   telefono           varchar2(15) not null,
   direccion          varchar2(100) not null,
   dni                varchar2(20) not null unique,
   salario            number not null,
   fecha_contratacion timestamp default current_timestamp not null,
   fecha_pago         timestamp default current_timestamp not null,
   created_at         timestamp default current_timestamp not null
);

create table cliente (
   id_cliente   number
      generated by default as identity
   primary key,
   nombre       varchar2(50) not null,
   apellido     varchar2(50) not null,
   email        varchar2(100) not null unique,
   tipo_cliente varchar2(20) not null,
   created_at   timestamp default current_timestamp not null,
   constraint chk_tipo_cliente check ( tipo_cliente in ( 'natural',
                                                         'juridico' ) )
);

create table proveedor (
   id_proveedor       number
      generated by default as identity
   primary key,
   nombre             varchar2(50) not null,
   telefono           varchar2(15) not null,
   ruc                varchar2(20) not null unique,
   direccion          varchar2(100) not null,
   email              varchar2(100),
   estado             varchar2(20) not null,
   fecha_contratacion timestamp default current_timestamp not null,
   fecha_pago         timestamp default current_timestamp not null,
   created_at         timestamp default current_timestamp not null,
   constraint chk_estado_proveedor check ( estado in ( 'activo',
                                                       'inactivo' ) )
);

create table producto (
   id_producto       number
      generated by default as identity
   primary key,
   nombre            varchar2(50) not null,
   precio            number not null,
   stock             number not null,
   fecha_vencimiento timestamp not null,
   id_categoria      number not null
      references categoria ( id_categoria ),
   id_proveedor      number not null
      references proveedor ( id_proveedor ),
   created_at        timestamp default current_timestamp not null,
   constraint chk_stock_producto check ( stock >= 0 ),
   constraint chk_precio_producto check ( precio >= 0 )
);

create table venta (
   id_venta    number
      generated by default as identity
   primary key,
   id_cliente  number not null
      references cliente ( id_cliente ),
   id_empleado number not null
      references empleado ( id_empleado ),
   fecha       timestamp default current_timestamp not null,
   total       number not null,
   estado      varchar2(20) not null,
   tipo_pago   varchar2(20) not null,
   created_at  timestamp default current_timestamp not null,
   constraint chk_estado_venta
      check ( estado in ( 'pendiente',
                          'pagada',
                          'cancelada' ) ),
   constraint chk_tipo_pago_venta
      check ( tipo_pago in ( 'efectivo',
                             'yape',
                             'plin' ) )
);

create table detalle_venta (
   id_detalle_venta number
      generated by default as identity
   primary key,
   id_venta         number not null
      references venta ( id_venta ),
   id_producto      number not null
      references producto ( id_producto ),
   cantidad         number not null,
   subtotal         number not null,
   created_at       timestamp default current_timestamp not null
);

create table comprobante (
   id_comprobante   number
      generated by default as identity
   primary key,
   id_venta         number not null
      references venta ( id_venta ),
   fecha_emision    timestamp default current_timestamp not null,
   total            number not null,
   tipo_comprobante varchar2(20) not null,
   created_at       timestamp default current_timestamp not null,
   constraint chk_tipo_comprobante check ( tipo_comprobante in ( 'boleta',
                                                                 'factura' ) )
);

create table boleta (
   id_boleta      number
      generated by default as identity
   primary key,
   id_comprobante number not null
      references comprobante ( id_comprobante ),
   created_at     timestamp default current_timestamp not null
);

create table factura (
   id_factura     number
      generated by default as identity
   primary key,
   id_comprobante number not null
      references comprobante ( id_comprobante ),
   created_at     timestamp default current_timestamp not null
);