create table categoria (
   id     number
      generated by default as identity
   primary key,
   nombre varchar2(50) not null
);

create table producto (
   id           number
      generated by default as identity
   primary key,
   nombre       varchar2(50) not null,
   precio       number(10,2) not null,
   stock        number not null,
   id_categoria number not null,
   foreign key ( id_categoria )
      references categoria ( id ),
   constraint chk_precio check ( precio >= 0 ),
   constraint chk_stock check ( stock >= 0 )
);

create table tipo_cliente (
   id     number
      generated by default as identity
   primary key,
   nombre varchar2(50) not null,
   constraint chk_nombre_tipo_cliente check ( nombre in ( 'natural',
                                                          'juridico' ) )
);

create table cliente (
   id              number
      generated by default as identity
   primary key,
   nombre          varchar2(50) not null,
   apellido        varchar2(50) not null,
   email           varchar2(100) not null,
   id_tipo_cliente number not null,
   foreign key ( id_tipo_cliente )
      references tipo_cliente ( id )
);

select * from producto;

CREATE TABLE cargo (
   id     number
      generated by default as identity
   primary key,
   nombre varchar2(50) not null,
   constraint chk_nombre_cargo check ( nombre in ( 'cajero',
                                                   'vendedor',
                                                   'admin' ) )
);

create table empleado (
   id            number
      generated by default as identity
   primary key,
   nombre        varchar2(50) not null,
   apellido      varchar2(50) not null,
   email         varchar2(100) not null,
   telefono      varchar2(15),
   direccion     varchar2(100),
   dni           varchar2(15) not null,
   fecha_ingreso date not null,
   salario       number(10,2) not null,
   id_cargo      number not null,
   foreign key ( id_cargo )
      references cargo ( id ),
   constraint chk_salario check ( salario >= 0 )
);

create table tipo_pago (
   id     number
      generated by default as identity
   primary key,
   nombre varchar2(50) not null,
   constraint chk_nombre_tipo_pago
      check ( nombre in ( 'efectivo',
                          'yape',
                          'plin' ) )
);

create table pedido (
   id           number
      generated by default as identity
   primary key,
   id_cliente   number not null,
   id_empleado  number not null,
   fecha        date not null,
   estado       varchar2(20) not null,
   id_tipo_pago number not null,
   foreign key ( id_cliente )
      references cliente ( id ),
   foreign key ( id_empleado )
      references empleado ( id ),
   foreign key ( id_tipo_pago )
      references tipo_pago ( id ),
   constraint chk_estado
      check ( estado in ( 'pendiente',
                          'completada',
                          'cancelada' ) )
);

create table detalle_venta (
   id          number
      generated by default as identity
   primary key,
   id_pedido    number not null,
   id_producto number not null,
   cantidad    number not null,
   foreign key ( id_pedido )
      references pedido ( id ),
   foreign key ( id_producto )
      references producto ( id ),
   constraint chk_cantidad check ( cantidad > 0 )
);

create table boleta (
   id       number
      generated by default as identity
   primary key,
   id_pedido number not null,
   fecha    date not null,
   dni      varchar2(15) not null,
   foreign key ( id_pedido )
      references pedido ( id ),
   constraint chk_dni check ( dni is not null and length( dni ) = 8 )
);

create table factura (
   id           number
      generated by default as identity
   primary key,
   id_pedido    number not null,
   fecha        date not null,
   ruc          varchar2(15) not null,
   razon_social varchar2(100) not null,
   foreign key ( id_pedido )
      references pedido ( id ),
   constraint chk_ruc check ( ruc is not null and length( ruc ) = 11 ),
   constraint chk_razon_social check ( razon_social is not null and length( razon_social ) > 0 )
);

-- eliminar indices
